log/build_2022-06-02_16-39-52/jetbot/stdout_stderr.log
running egg_info
writing ../../build/jetbot/jetbot.egg-info/PKG-INFO
writing dependency_links to ../../build/jetbot/jetbot.egg-info/dependency_links.txt
writing entry points to ../../build/jetbot/jetbot.egg-info/entry_points.txt
writing requirements to ../../build/jetbot/jetbot.egg-info/requires.txt
writing top-level names to ../../build/jetbot/jetbot.egg-info/top_level.txt
reading manifest file '../../build/jetbot/jetbot.egg-info/SOURCES.txt'
writing manifest file '../../build/jetbot/jetbot.egg-info/SOURCES.txt'
running build
running build_py
copying jetbot/jb_start.py -> /home/sycamore/Syca_ws/build/jetbot/build/lib/jetbot
running install
running install_lib
copying /home/sycamore/Syca_ws/build/jetbot/build/lib/jetbot/jb_start.py -> /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/jetbot
byte-compiling /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/jetbot/jb_start.py to jb_start.cpython-38.pyc
running install_data
  File "/home/sycamore/Syca_ws/install/lib/python3.8/site-packages/jetbot/jb_start.py", line 54
    'State of robot is : (x=%f, y=%f, theta=%f)\n %
                                                  ^
SyntaxError: EOL while scanning string literal

running install_egg_info
removing '/home/sycamore/Syca_ws/install/lib/python3.8/site-packages/jetbot-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/jetbot/jetbot.egg-info to /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/jetbot-0.0.0-py3.8.egg-info
running install_scripts
Installing start script to /home/sycamore/Syca_ws/install/lib/jetbot
writing list of installed files to '/home/sycamore/Syca_ws/build/jetbot/install.log'
